--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -16,8 +16,17 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run tests
       run: |
         pytest
+
+    - name: Check formatting with black
+      run: |
+        black --check .
+
+    - name: Verify imports with isort
+      run: |
+        isort --check-only .
 
