--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,11 +1,11 @@
-name: Python package
+name: CI
 
 on:
   push:
   pull_request:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,8 +16,9 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run tests
+    - name: Run tests with coverage
       run: |
-        pytest
+        pytest --cov=src --cov-report=xml
 
