Fix workflow to use cinder_web_scraper instead of src directory

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,8 +21,7 @@ jobs:
           pip install flake8
       - name: Lint with flake8
         run: |
-          flake8 src tests main.py
+          flake8 cinder_web_scraper tests main.py
       - name: Run tests with coverage
         run: |
-          pytest --cov=src --cov-report=xml
-
+          pytest --cov=cinder_web_scraper --cov-report=xml
