Fix pyproject.toml to reference correct directory structure
- Change from `where = ["src"]` to `where = ["."]` to match the current directory structure
- This fixes the package discovery for the `cinder_web_scraper` directory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,5 @@
 [build-system]
-
 requires = ["setuptools>=68", "wheel"]
-
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -22,5 +20,6 @@ cinder-web-scraper = "cinder_web_scraper.__main__:main"
 dev = [
     "pytest==8.4.0",
 ]
+
 [tool.setuptools.packages.find]
-where = ["src"]
+where = ["."]
