--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,6 +19,8 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install flake8
+      - name: Lint with flake8
+        run: flake8 cinder_web_scraper tests
       - name: Run tests with coverage
         run: |
           pytest --cov=cinder_web_scraper --cov-report=xml
